Optimize the imports.